# weebill

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  two-stage-PR.md
 /: t1.fq.paired.sylsp
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  test.yml
docs/: two-stage-profiling.md
examples/: bench_seeding.rs  cmp_sketch.rs
src/: avx2_seeding.rs  avx512_seeding.rs  checksum.rs  cmdline.rs  compress.rs  constants.rs  contain.rs  inference.rs  inspect.rs  lib.rs  main.rs  merge.rs  refdelta.rs  seeding.rs  sketch.rs  twostage_db.rs  types.rs
src/refdelta/: mod.rs  ref_build.rs  sketch_compress.rs  sketch_decompress.rs
test_files/: bad_interleaved.fq  k12_interleaved.fq  k12_interleaved_dot.fq  t_interleaved.fq
tests/: integration_test.rs  unit_test.rs
