[package]
name = "weebill"
version = "0.1.0"
edition = "2021"
description = "Fast and precise species-level metagenomic profiling (ANI querying + taxonomic profiling), a fork of sylph"
license = "MIT"
repository = "https://github.com/wwood/weebill"
homepage = "https://github.com/wwood/weebill"
readme = "README.md"
# Test data and images would push the published crate over the crates.io 10 MiB limit.
exclude = ["test_files/", "assets/", "*.png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "weebill"
path = "src/main.rs"

[dependencies]
needletail = "0.7"
simple_logger=  { version = "5", features = ["stderr"] }
log = "0"
rayon = "1"
smallvec = { version = "1", features = ["union","serde","write"] }
serde = { version = "1", features = ["derive"] }
# https://sr.ht/~stygianentity/bincode/ - Due to a doxxing incident bincode development has officially ceased and will not resume. Version 1.3.3 is considered a complete version of bincode that is not in need of any updates.
bincode = "1"
fxhash = "0"
boomphf = { version = "0.6", features = ["serde"] }
clap = { version = "3", features = ["derive"] }
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
zstd = "0.13"
statrs="0.18"
nalgebra="0"
# Pinned to 0.9 to match scalable_cuckoo_filter 0.5's Rng trait, so the dedup
# filters can be given a fixed-seed StdRng for reproducible sketching.
rand = "0.9"
regex = "1"
fastrand = "2"
memory-stats = "1"
scalable_cuckoo_filter = "0.5"
serde_yaml = "0.9"
twox-hash = { version = "2", default-features = false, features = ["xxhash64"] }

[target.'cfg(target_env = "musl")'.dependencies]
tikv-jemallocator = "0"


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"


[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
#opt-level = 1
opt-level = 3

#[rust]
#debuginfo-level = 1

# Config for 'dist' (cargo-dist): prebuilt binaries + shell installer
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-musl"]
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
